changes in previous git initial commit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Bree+Serif&family=Nova+Square&family=Oswald:wght@200;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <style>
@@ -44,9 +44,7 @@
       transition:
         font-size 0.7s cubic-bezier(0.6,-0.5, 0.7,-0.1),
         flex 0.7s cubic-bezier(0.6,-0.5, 0.7,-0.1),
-        /* font-size 0.5s cubic-bezier(0.61,-0.19, 0.7,-0.11), */
-        /* flex 0.5s cubic-bezier(0.61,-0.19, 0.7,-0.11), */
-        background 0.2s;
+        background 0.5s;
       font-size: 20px;
       background-size: cover;
       background-position: center;
@@ -141,7 +139,6 @@ chip: Xf071ws2Icg
 font-family: 'Quattrocento Sans', sans-serif;
        */
     .panel p {
-      /* text-transform: uppercase; */
       font-family:'Quattrocento Sans', sans-serif;
       text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
       font-size: 1em;
