updating react router links

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>UCLA ECE Report 2020-2021</title>
+  <title>UCLA ECE Report 2021-2022</title>
   <!-- <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,46 +53,46 @@
       flex-direction: column;
     }
 
-    .panel1 {
+    /* .panel1 {
       background-image:url(https://source.unsplash.com/6k2wkqGMw1I/1500x1500);
-      filter: grayscale(.9);
-      /* filter: sepia(45%); */
+      filter: grayscale(.2);
+      filter: sepia(45%);
     }
     .panel2 {
       background-image:url(https://source.unsplash.com/13g9FZqVvNY/1500x1500);
-      filter: grayscale(.9);
-      /* filter: sepia(95%); */
+      filter: grayscale(.2);
+      filter: sepia(95%);
     }
     .panel3 {
       background-image:url(https://source.unsplash.com/uNyF_FXn4qw/1500x1500);
-      filter: grayscale(.9);
-      /* filter: sepia(85%); */
+      filter: grayscale(.2);
+      filter: sepia(85%);
     }
     .panel4 {
       background-image:url(https://source.unsplash.com/Xf071ws2Icg/1500x1500);
       filter: grayscale(.9);
-      /* filter: sepia(75%); */
+      filter: sepia(75%);
     }
     .panel5 {
       background-image:url(https://source.unsplash.com/161u7xxBRI4/1500x1500);
       filter: grayscale(.9);
-      /* filter: sepia(55%); */
+      filter: sepia(55%);
     }
     .panel6 {
       background-image:url(https://source.unsplash.com/3cIPFNW3wog/1500x1500);
       filter: grayscale(.9);
-      /* filter: sepia(75%); */
+      filter: sepia(75%);
     }
     .panel7 {
       background-image:url(https://source.unsplash.com/KJ241ZAOYwU/1500x1500);
       filter: grayscale(.9);
-      /* filter: sepia(85%); */
+      filter: sepia(85%);
     }
     .panel8 {
       background-image:url(https://source.unsplash.com/Ljz_Wmk7t7g/1500x1500);
       filter: grayscale(.9);
-      /* filter: sepia(95%); */
-    }
+      filter: sepia(95%);
+    } */
 
 /* unsplash:
 girl in sound booth: X-etICbUKec
@@ -139,7 +139,7 @@ chip: Xf071ws2Icg
     }
 
     .panel p:nth-child(2) {
-      font-family:'Grand Hotel', cursive;
+      font-family:'Alfa Slab One', cursive;
       font-size: 2.4em;
     }
     .panel p:nth-child(3) span {
@@ -167,72 +167,72 @@ chip: Xf071ws2Icg
     }
   </style>
 
-
+<!--
   <div class="panels">
     <div class="panel panel1">
-      <p>Professor Suhas </p>
-      <p>Diggavi</p>
+      <p>Professor Jackie </p>
+      <p>Tran</p>
       <p><span>more -></span></p>
-      <p>Received Amazon Research Award and Guggenheim Fellowship </p>
+      <p>Received Aclaim </p>
     </div>
     <div class="panel panel2">
       <p>Professor Achuta </p>
       <p>Kadambi</p>
       <p><span>more -></span></p>
-      <p>Featured in Science Journal and Received NSF Career Award </p>
+      <p>Featured </p>
     </div>
     <div class="panel panel3">
       <p>Professor  Xiang Anthony </p>
       <p>Chen</p>
       <p><span>more -></span></p>
-      <p>Received NSF Career and Young Investigator Awards</p>
+      <p>Young Awards</p>
     </div>
     <div class="panel panel4">
       <p>Professor Sam</p>
       <p> Emaminejad</p>
       <p><span>more -></span></p>
-      <p>Research Featured on Cover of Lab on a Chip</p>
+      <p>Research on a Chip</p>
     </div>
     <div class="panel panel5">
       <p>Professor Kang</p>
       <p> Wang</p>
       <p><span>more -></span></p>
-      <p>Received NSF Grant to Improve Quantum Computing Chips</p>
+      <p>Received Chips</p>
     </div>
     <div class="panel panel6">
       <p>Distinguished Professor Yahya</p>
       <p> Rahmat-Samii</p>
       <p><span>more -></span></p>
-      <p>Released New Book and Co-authored Best Paper Award of AIAA </p>
+      <p>Released Book </p>
     </div>
     <div class="panel panel7">
-      <p>Alumni Adrian</p>
+      <p> Adrian</p>
       <p> Tang</p>
       <p><span>more -></span></p>
-      <p>Recognized as 2021 Outstanding Young Engineer by IEEE MTT-S</p>
+      <p>Recognized Young</p>
     </div>
     <div class="panel panel8">
       <p>UCLA Alumna</p>
-      <p> Alumni</p>
+      <p> former student</p>
       <p><span>more -></span></p>
-      <p> Inspiring Others through Work at NASA JPL</p>
+      <p> Inspiring Others </p>
     </div>
-  </div>
+  </div> -->
 
   <script>
     const panels = document.querySelectorAll('.panel');
 
-    function toggleOpen() {
-      console.log('Hello, I\'ve been toggled!');
-      this.classList.toggle('open');
-    }
+    // function toggleOpen() {
+    //   console.log('Hello, I\'ve been toggled!');
+    //   this.classList.toggle('open');
+    // }
 
-    function toggleActive(e) {
-      console.log(e.propertyName);
-      if (e.propertyName.includes('flex')) {
-        this.classList.toggle('open-active');
-      }
-    }
+    // function toggleActive(e) {
+    //   console.log(e.propertyName);
+    //   if (e.propertyName.includes('flex')) {
+    //     this.classList.toggle('open-active');
+    //   }
+    // }
 
     panels.forEach(panel => panel.addEventListener('click', toggleOpen));
     panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
