moved all css to scss folders, updated fonts

--- a/index.html
+++ b/index.html
@@ -7,236 +7,20 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Bree+Serif&family=Nova+Square&family=Oswald:wght@200;400;700&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
   <style>
-    html {
-      box-sizing: border-box;
-      background: #020a24;
-      font-family: 'helvetica neue';
-      font-size: 20px;
-      font-weight: 200;
-    }
-
-    body {
-      margin: 0;
-    }
-
-    *, *:before, *:after {
-      box-sizing: inherit;
-    }
-
-    .panels {
-      min-height: 100vh;
+    /* .panels {
+      min-height: 50vh;
       overflow: hidden;
       display: flex;
-    }
-
-    .panel {
-      display: flex;
-      background: #6B0F9C;
-      box-shadow: inset 0 0 0 3px rgba(255,255,255,0.18);
-      color: white;
-      text-align: center;
-      align-items: center;
-      /* Safari transitionend event.propertyName === flex */
-      /* Chrome + FF transitionend event.propertyName === flex-grow */
-      transition:
-        font-size 0.7s cubic-bezier(0.6,-0.5, 0.7,-0.1),
-        flex 0.7s cubic-bezier(0.6,-0.5, 0.7,-0.1),
-        background 0.5s;
-      font-size: 20px;
-      background-size: cover;
-      background-position: center;
-      flex: 1;
-      justify-content: center;
-      flex-direction: column;
-    }
-
-    /* .panel1 {
-      background-image:url(https://source.unsplash.com/6k2wkqGMw1I/1500x1500);
-      filter: grayscale(.2);
-      filter: sepia(45%);
-    }
-    .panel2 {
-      background-image:url(https://source.unsplash.com/13g9FZqVvNY/1500x1500);
-      filter: grayscale(.2);
-      filter: sepia(95%);
-    }
-    .panel3 {
-      background-image:url(https://source.unsplash.com/uNyF_FXn4qw/1500x1500);
-      filter: grayscale(.2);
-      filter: sepia(85%);
-    }
-    .panel4 {
-      background-image:url(https://source.unsplash.com/Xf071ws2Icg/1500x1500);
-      filter: grayscale(.9);
-      filter: sepia(75%);
-    }
-    .panel5 {
-      background-image:url(https://source.unsplash.com/161u7xxBRI4/1500x1500);
-      filter: grayscale(.9);
-      filter: sepia(55%);
-    }
-    .panel6 {
-      background-image:url(https://source.unsplash.com/3cIPFNW3wog/1500x1500);
-      filter: grayscale(.9);
-      filter: sepia(75%);
-    }
-    .panel7 {
-      background-image:url(https://source.unsplash.com/KJ241ZAOYwU/1500x1500);
-      filter: grayscale(.9);
-      filter: sepia(85%);
-    }
-    .panel8 {
-      background-image:url(https://source.unsplash.com/Ljz_Wmk7t7g/1500x1500);
-      filter: grayscale(.9);
-      filter: sepia(95%);
+      color:azure;
+      background-color:blueviolet;
     } */
+ </style>
 
-/* unsplash:
-girl in sound booth: X-etICbUKec
-light cube: KJ241ZAOYwU
-bubble: 6k2wkqGMw1I
-phone and pen: SgmhqvhBIKg
-solar panel: HCha-UHkIg8
-iwatch: uNyF_FXn4qw
-Toyota concept car: 161u7xxBRI4
-student lab: fr5h_07OrPI
-engineer laptop: Hjez0AY_c4k
-propulsion i_14EbINjKY
-sound studio: wFW4zlulBT8
-radar antenna: 3cIPFNW3wog
-arm cast: 13g9FZqVvNY
-Kenedy Space Ctr: Ljz_Wmk7t7g
-chip: Xf071ws2Icg
- */
-
-
-    /* Flex Items */
-    .panel > * {
-      margin: 0;
-      width: 100%;
-      transition: transform 0.5s;
-      flex: 1 0 auto;
-      justify-content: center;
-      align-items: center;
-      display: flex;
-    }
-
-    .panel.open-active:hover { filter: grayscale(0.15); filter: sepia(0.2); }
-    .panel > *:first-child { transform: translateY(-100%); }
-    .panel.open-active:hover > *:first-child { transform: translateY(55%); }
-    .panel > *:last-child { transform: translateY(100%); }
-    .panel > *:nth-child(3) { transform: translateY(220%); color: orange;}
-    .panel.open-active:hover > *:last-child { transform: translateY(-90%); }
-    .panel.open-active > *:nth-child(3) { transform: translateY(140%); }
-
-    .panel p {
-      font-family:'Quattrocento Sans', sans-serif;
-      text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
-      font-size: 1em;
-    }
-
-    .panel p:nth-child(2) {
-      font-family:'Alfa Slab One', cursive;
-      font-size: 2.4em;
-    }
-    .panel p:nth-child(3) span {
-      font-family:'Quattrocento Sans', sans-serif;
-      font-weight: 700;
-      font-size: 0.6em;
-      text-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
-
-      background-color: white;
-      box-shadow: 0 0 0 7px white
-    }
-    /* .panel p:nth-child(4) {
-      font-size: 0.6em;
-    } */
-
-    .panel.open {
-      flex: 5;
-      font-size: 40px;
-    }
-
-    @media only screen and (max-width: 600px) {
-      .panel p {
-        font-size: 1.2em;
-      }
-    }
-  </style>
-
-<!--
-  <div class="panels">
-    <div class="panel panel1">
-      <p>Professor Jackie </p>
-      <p>Tran</p>
-      <p><span>more -></span></p>
-      <p>Received Aclaim </p>
-    </div>
-    <div class="panel panel2">
-      <p>Professor Achuta </p>
-      <p>Kadambi</p>
-      <p><span>more -></span></p>
-      <p>Featured </p>
-    </div>
-    <div class="panel panel3">
-      <p>Professor  Xiang Anthony </p>
-      <p>Chen</p>
-      <p><span>more -></span></p>
-      <p>Young Awards</p>
-    </div>
-    <div class="panel panel4">
-      <p>Professor Sam</p>
-      <p> Emaminejad</p>
-      <p><span>more -></span></p>
-      <p>Research on a Chip</p>
-    </div>
-    <div class="panel panel5">
-      <p>Professor Kang</p>
-      <p> Wang</p>
-      <p><span>more -></span></p>
-      <p>Received Chips</p>
-    </div>
-    <div class="panel panel6">
-      <p>Distinguished Professor Yahya</p>
-      <p> Rahmat-Samii</p>
-      <p><span>more -></span></p>
-      <p>Released Book </p>
-    </div>
-    <div class="panel panel7">
-      <p> Adrian</p>
-      <p> Tang</p>
-      <p><span>more -></span></p>
-      <p>Recognized Young</p>
-    </div>
-    <div class="panel panel8">
-      <p>UCLA Alumna</p>
-      <p> former student</p>
-      <p><span>more -></span></p>
-      <p> Inspiring Others </p>
-    </div>
-  </div> -->
-
-  <script>
-    const panels = document.querySelectorAll('.panel');
-
-    // function toggleOpen() {
-    //   console.log('Hello, I\'ve been toggled!');
-    //   this.classList.toggle('open');
-    // }
-
-    // function toggleActive(e) {
-    //   console.log(e.propertyName);
-    //   if (e.propertyName.includes('flex')) {
-    //     this.classList.toggle('open-active');
-    //   }
-    // }
-
-    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
-    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
-  </script>
 
 </body>
 </html>
