added text and images for New Faculty Yuan Tian

--- a/src/assets/html-alumni.html
+++ b/src/assets/html-alumni.html
@@ -95,10 +95,10 @@
         <div class="card">
             <div class="card-name">Administration</div>
             <div class="prof-name">C.-K. Ken Yang <div class="prof-title">Department Chair</div></div>
-            <div class="prof-name">Abeer Alwan <div class="prof-title">Vice-Chair, Undergraduate Affairs</div></div>
+            <div class="prof-name">Danijela Cabric <div class="prof-title">Vice-Chair, Undergraduate Affairs</div></div>
             <div class="prof-name">Lieven Vandenberghe <div class="prof-title">Vice-Chair, Graduate Affairs</div></div>
             <div class="prof-name">Subramanian Iyer <div class="prof-title">Vice-Chair, Industry Relations</div></div>
-            <div class="prof-name">Puneet Gupta <div class="prof-title">Vice-Chair, Computer Engineering</div></div>
+            <div class="prof-name">Mani Srivastava <div class="prof-title">Vice-Chair, Computer Engineering</div></div>
         </div>
         <div class="card">
             <div class="card-name">Area Directors</div>
