--- a/src/assets/html-highlights.html
+++ b/src/assets/html-highlights.html
@@ -7,7 +7,7 @@
 <p> The Burroughs Wellcome Fund serves and strengthens society by nurturing a diverse group of leaders in biomedical sciences to improve human health through education and powering discovery in frontiers of greatest need. Its financial support is channeled primarily through competitive peer-reviewed award programs. The Burroughs Wellcome Fund was founded in 1955 as the corporate foundation of the pharmaceutical firm Burroughs Wellcome Co. In 1993, it became fully independent from the company, which was acquired by Glaxo in 1995. BWF has no affiliation with any corporation.</p>
 
 
-<!-- zhang -->
+<!-- Towards Secure, Privacy-Preserving, and Ethical Computing yaun tiang -->
 
 <p style="text-indent:0;"><span class="first-letter"> Our </span> environments are getting smarter. Advances in sensors, actuators, and communication have made the vision of ambient intelligence increasingly achievable. We have seen an increasing number of smarts around us such as voice assistants, service robots, UAVs, autonomous vehicles, and a broader array of connective objects in IoT. Professor Yang Zhang creates enabling technologies to make ambient intelligence more powerful in facilitating the future of work, healthcare, and education. He also researches human-centered design frameworks to make ambient intelligence and the environments they reside in equally accessible to all and can be developed by anyone. Professor Zhang is currently directing the Human-Centered Computing & Intelligent Sensing Lab (HiLab) at UCLA ECE. <span className="text-italic">https://www.hilab.dev</span></p>
 
