corrected student center image, edited mflnsk

--- a/src/assets/html-faculty-national-academies.html
+++ b/src/assets/html-faculty-national-academies.html
@@ -13,16 +13,6 @@
             </ul>
         </div>
         <!-- END OF CARD-->
-        <!-- <div class="card">
-          <div class="frame"><img class="card-pic" src="/img/candler7.jpg" alt="UCLA academy candler"></div>
-          <div class="prof-title">Professor</div>
-          <div class="prof-name">Rob Candler</div>
-          <ul class="card-bottom">
-            <li>Senior Member of National Academy of Inventors, 2019.</li>
-            <li></li>
-          </ul>
-        </div> -->
-        <!-- END OF CARD -->
         <div class="card">
             <div class="frame"><img class="card-pic" src="/img/Frank_Chang.jpg" alt="UCLA academy frank chang"></div>
             <div class="prof-title">Distinguished </br> Professor</div>
@@ -47,7 +37,6 @@
             </ul>
         </div>
         <!-- END OF CARD C-->
-
         <div class="card">
             <div class="frame"><img class="card-pic" src="/img/Goebel.jpg" alt="UCLA academy goebel"></div>
             <div class="prof-title">Adjunct<br> Professor</div>
@@ -61,28 +50,6 @@
         </div>
         <!-- END OF CARD G-->
         <div class="card">
-            <div class="frame"><img class="card-pic" src="/img/Itoh.jpg" alt="UCLA academy Tatsuo Itoh"></div>
-            <!-- <div class="prof-title"> In Memoriam</div> -->
-            <div class="prof-title">Distinguished </br>Chancellor\'s Professor</div>
-            <div class="prof-name">­Tatsuo Itoh</div>
-            <ul class="card-bottom">
-                <li>National Academy of Engineering, 2003.</li>
-                <li>National Academy of Inventors, 2013.</li>
-                <li>For seminal contributions in advancing electromagnetic engineering for ­microwave and wireless components, ­circuits, and systems.</li>
-                <li></li>
-            </ul>
-        </div>
-
-        <div class="card">
-            <div class="card-name">In Memoriam:</div>
-            <div class="prof-name">Professor Tatsuo Itoh, Pioneer of Microwave and Millimeter-Wave Electronics</div>
-            <div class="card-bottom">
-                <p>Professor Tatsuo Itoh died at home on March 4, 2021, at the age of 80. In an illustrious career that spanned more than 50 years, Itoh was a prolific researcher who was among the world’s most influential in the field of microwave and millimeter-wave frequencies for electronics and communication technologies. At UCLA Samueli, he was a beloved faculty member, advisor to 60 Ph.D. graduates since 1991 and headed the UCLA Microwave Electronics Laboratory. He was the author of 48 books and book chapters, as well as nearly 1,500 research publications in peer-reviewed journals and conference proceedings. His works have been cited more than 63,000 times, according to Google Scholar. </p>
-            </div>
-        </div>
-        <!-- END OF CARD ITOH (2-columns card) -->
-
-        <div class="card">
             <div class="frame"><img class="card-pic" src="/img/Subramanian_Iyer.jpg" alt="UCLA academy iyer"></div>
             <div class="prof-title">Distinguished </br>Chancellor\'s Professor</div>
             <div class="prof-name">­Subramanian Iyer</div>
@@ -93,12 +60,12 @@
             </ul>
         </div>
         <!-- END OF CARD I-->
-
         <div class="card">
             <div class="frame"><img class="card-pic" src="/img/Jalali.jpg" alt="UCLA academy Jalali"></div>
             <div class="prof-title">Distinguished </br>Professor</div>
             <div class="prof-name">Bahram Jalali </div>
             <ul class="card-bottom">
+                <li>National Academy of Enginering, 2022.</li>
                 <li>National Academy of Inventors, 2020.</li>
                 <li>He is also a member of AIMBE.</li>
 
@@ -117,15 +84,6 @@
             </ul>
         </div>
         <!-- END OF CARD J-->
-        <!-- <div class="card">
-            <div class="frame"><img class="card-pic" src="/img/Achuta-Kadambi.jpg" alt="UCLA academy Achuta Kadambi"></div>
-            <div class="prof-title">Assistant Professor</div>
-            <div class="prof-name">Achuta Kadambi</div>
-            <ul class="card-bottom">
-                <li>Senior Member of National Academy of Inventors, 2020.</li>
-            </ul>
-        </div> -->
-        <!-- END OF CARD -->
         <div class="card">
             <div class="frame"><img class="card-pic" src="/img/Liou_Kuo-Nan.jpg" alt="UCLA academy Liou Kuo-Nan"></div>
             <div class="prof-title">Professor</div>
@@ -327,4 +285,4 @@
         <!-- END OF CARD -->
     </div>
 </div>
-<!-- END OF SECTION NATIONAL ACADEMIES--></div>
+<!-- END OF SECTION NATIONAL ACADEMIES -->
