--- a/src/assets/html-faculty-recent-honored.html
+++ b/src/assets/html-faculty-recent-honored.html
@@ -5,34 +5,13 @@
         </p>
     </div>
     <div class="card-deck">
-        <div class="card">
-            <div class="frame"><img class="card-pic" src="/img/Jalali.jpg" alt="UCLA ECE Faculty Jalali Fellow of NAI"></div>
-            <div class="prof-title">Distinguished Professor</div>
-            <div class="prof-title">Fang Lu Endowed Professor of Engineering</div>
-            <div class="prof-name">Bahram Jalali</div>
-            <ul class="card-bottom">
-                <li>Fellow of National Academy of Inventors, 2020.</li>
-                <li>Research:
-                    <ul>
-                        <li>Silicon photonics</li>
-                        <li>Bioimaging and screening</li>
-                        <li>Physics-inspired algorithms</li>
-                        <li>Nonlinear dynamics</li>
-                        <li>Artificial intelligence</li>
-                    </ul>
-                </li>
-                <li></li>
-            </ul>
-        </div>
-        <!-- END OF CARD -->
-
-        <div class="card">
-            <div class="frame"><img class="card-pic" src="/img/Jason_Cong.jpg" alt="UCLA ECE Faculty Jason Cong NAI"></div>
+          <div class="card">
+            <div class="frame"><img class="card-pic" src="/img/space-telescope.jpg" alt="UCLA ECE Faculty NAI"></div>
             <div class="prof-title">Distinguished Chancellor\'s Professor</div>
-            <div class="prof-title">Volgenau Chair for Engineering Excellence</div>
-            <div class="prof-name">Jason Cong</div>
+            <div class="prof-title">Chair Engineering</div>
+            <div class="prof-name">Jason</div>
             <ul class="card-bottom">
-                <li>Fellow of National Academy of Inventors, 2020.</li>
+                <li>Fellow of National Academy of Inventors, 2022.</li>
                 <li>Research:
                     <ul>
                         <li>Electronic design automation</li>
@@ -50,6 +29,8 @@
             <div class="prof-title">Other ECE Faculty</div>
             <div class="prof-name">Members of NAI</div>
             <ul class="card-bottom">
+                <li>Bahram Jalali, Senior Member 2020.</li>
+                <li>Jason Cong, Senior Member 2020.</li>
                 <li>Rob Candler, Senior Member 2018.</li>
                 <li>M.C. Frank Chang, Fellow 2015.</li>
                 <li>Aydogan Ozcan, Fellow 2018.</li>
@@ -127,7 +108,6 @@
     </div><!-- END OF page-TEXT-->
     <div class="card-deck">
         <div class="card">
-            <!-- <div class="frame"><img class="card-pic" src="/img/Jalali.jpg" alt="UCLA ECE Faculty Jalali Fellow of NAI"></div> -->
             <img class="logo-pic" src="/2021-2022/img/samueli_IEEEmedal.jpg" alt="UCLA ECE Henry Samueli IEEE Founders Medal">
 
             <div class="prof-title">Professor</div>
@@ -157,7 +137,6 @@
     </div>
     <div class="card-deck">
         <div class="card">
-            <!-- <div class="frame"><img class="card-pic" src="/img/Jalali.jpg" alt="UCLA ECE Faculty Jalali Fellow of NAI"></div> -->
             <img class="logo-pic " src="/2021-2022/img/Jonathan_Kao.jpg" alt="UCLA ECE Faculty Jonathan Kao">
 
             <div class="prof-title">Assistant Professor</div>
@@ -173,31 +152,5 @@
     </div>  <!-- end card-deck -->
 
     <div class="spacer"><img src="/img/pixel.png"></div>
-
-    <h3 class="page-title">Institute of Physics</h3>
-    <div class="page-text">
-        <p>Professor Mona Jarrahi was recently elected as a Fellow of the Institute of Physics. The fellowships are offered to those who are at “the peak of their career” and have had a substantial influence within their sector. The Institute of Physics is an international society for physics that fosters the advancement of knowledge, community, career development, and professional recognition for its members.</p>
-        <p> Jarrahi’s election as a Fellow comes at a significant part of her career as she was recently awarded the Catalyzing Pediatric Innovation Grant from the West Coast Consortium for Technology & Innovation in Pediatrics for her work in making advancements in the pediatric field. The grant was awarded to five winners who worked on projects to improve care for infants and children. Jarrahi collaborated with Jose A. Pineda and Najmedin Meshkati, both professors at USC, to develop a terahertz scanner for pediatric vascular access. The venture addresses the difficult procedure of providing intravenous (IV) access to children by using the latest terahertz imaging technology developed in Jarrahi’s research group. </p>
-    </div>
-    <div class="card-deck">
-        <div class="card">
-            <div class="frame">
-                <img class="card-pic" src="/2021-2022/img/Mona-Jarrahi-Headshot.jpg" alt="UCLA ECE Faculty Mona Jarrahi">
-            </div>
-            <div class="prof-title">Professor</div>
-            <div class="prof-name">Mona Jarrahi </div>
-            <ul class="card-bottom">
-                <li>Institute of Physics Fellow 2020.</li>
-                <li>Burroughs Wellcome Fund’s Innovations in Regulatory Science Award 2019.</li>
-                <li>IEEE Fellow 2019.</li>
-                <li>SPIE Fellow 2018.</li>
-                <li> </li>
-            </ul>
-        </div><!-- END OF CARD -->
-
-    </div><!-- END OF CARD DECK -->
-    <div class="spacer"><img src="/img/pixel.png"></div>
-
-
 
 </div> <!-- END OF SECTION recent honored-->
