--- a/src/assets/html-faculty.html
+++ b/src/assets/html-faculty.html
@@ -254,7 +254,6 @@
         <div class="prof-pics">
             <div><img class="fac" src="/img/Arisaka_Katsushi.jpg" alt="UCLA ECE Faculty  Arisaka Katsushi"></div>
             <div><img class="fac" src="/img/SergioCarbajo.jpg" alt="UCLA ECE Faculty  Sergio Carbajo"></div>
-            <div><img class="fac" src="/img/Jalali.jpg" alt="UCLA ECE Faculty  Jalali"></div>
             <div><img class="fac" src="/img/Jia-Ming-Liu.jpg" alt="UCLA ECE Faculty  Jia Ming Liu"></div>
             <div><img class="fac" src="/img/Ozcan_Aydogan.jpg" alt="UCLA ECE Faculty Aydogan Ozcan"></div>
             <div><img class="fac" src="/img/williams.jpg" alt="UCLA ECE Faculty  Ben Williams"></div>
@@ -262,7 +261,7 @@
             <div><img class="fac" src="/img/PATEL-emeritus.jpg" alt="UCLA ECE Faculty Kumar Patel"></div>
             <div><img class="fac" src="/img/stafsudd.jpg" alt="UCLA ECE Faculty  Stafsudd"></div>
         </div>
-        <div class="page-caption faculty-caption"><b>Faculty:</b>  Katsushi Arisaka, Sergio Carbajo, Bahram Jalali, Jia-Ming Liu, Aydogan Ozcan, Benjamin Williams (pictured). Also Clarice Aiello, Mona Jarrahi, Chan Joshi, Chee Wei Wong. <b>Emeriti Faculty: </b>Harold Fetterman, C. Kumar Patel, Oscar Stafsudd</div>
+        <div class="page-caption faculty-caption"><b>Faculty:</b>  Katsushi Arisaka, Sergio Carbajo, Jia-Ming Liu, Aydogan Ozcan, Benjamin Williams (pictured). Also Clarice Aiello, Mona Jarrahi, Chan Joshi, Chee Wei Wong. <b>Emeriti Faculty: </b>Harold Fetterman, C. Kumar Patel, Oscar Stafsudd</div>
     </div>
 </div>
 <!-- END OF SECTION -->
@@ -366,7 +365,7 @@
             <div><img class="fac" src="/img/Fabien_Scalzo.jpg" alt="UCLA ECE Faculty Fabien Scalzo"></div>
             <div><img class="fac" src="/img/Villasenor.jpg" alt="UCLA ECE Faculty Villasenor"></div>
         </div>
-        <div class="page-caption faculty-caption"><b>Faculty:</b> Abeer Alwan, Corey W. Arnold, Danijela Cabric, Lara Dolecek, Achuta Kadambi, Jonathan Kao, Mayank Mehta, Stefano Soatto, Fabien Scalzo, John Villasenor (pictured). Also Omid Abari, Alyson Fletcher, Lei He, Suhas Diggavi, Bahram Jalali, Asad M. Madni, Gregory Pottie, Vwani Roychowdhury, Mihaela van der Schaar, Mani Srivastava, Paulo Tabuada, Lieven Vandenberghe, Lin F. Yang.</div>
+        <div class="page-caption faculty-caption"><b>Faculty:</b> Abeer Alwan, Corey W. Arnold, Danijela Cabric, Lara Dolecek, Achuta Kadambi, Jonathan Kao, Mayank Mehta, Stefano Soatto, Fabien Scalzo, John Villasenor (pictured). Also Omid Abari, Alyson Fletcher, Lei He, Suhas Diggavi, Asad M. Madni, Gregory Pottie, Vwani Roychowdhury, Mihaela van der Schaar, Mani Srivastava, Paulo Tabuada, Lieven Vandenberghe, Lin F. Yang.</div>
         <div class="prof-pics">
             <div><img class="fac" src="/img/Rajeev_Jain.jpg" alt="UCLA ECE Faculty Rajeev_Jain"></div>
             <div><img class="fac" src="/img/Alan-Willson.jpg" alt="UCLA ECE Faculty Alan-Willson"></div>
