--- a/src/assets/html-alumni.html
+++ b/src/assets/html-alumni.html
@@ -1,3 +1,215 @@
+<!-- ALUMNI ALUMNAE -->
+
+<div class="grid-cards">
+	<p> Thanks to the leadership of <span>Professor Abeer Alwan </span> and our accomplished alumnae, a new and vibrant organization has been created. The <span>UCLA ECE ­Alumnae Advisory Committee </span> aims to educate and ­enable ­female ­students of all ages to ­pursue ­academic and ­career opportunities in ­electrical and computer ­engineering. The key mission of the ­committee is to unite ­alumnae to support one ­another, and to ­foster a community of outreach and ­development for girls ­interested in science and technology, from the time they start elementary school through ­university and beyond.</p>
+	<div class=" card-deck">
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Alumnae-King_Grace.jpg" alt="ECE Alumnae Advisory Committee "></img>
+			</div>
+			<div class="prof-title">Co-chair</div>
+			<div class="prof-name">Grace King</div>
+			<div class="prof-title">Attorney with Deloitte</div>
+		</div>
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Aluminae-Ani-Garabedian.jpg" alt="ECE Alumnae Advisory Committee "></img>
+			</div>
+			<div class="prof-title">Co-chair</div>
+			<div class="prof-name">Ani Garabedian</div>
+			<div class="prof-title">Northrop Grumman Communications Systems Engineering</div>
+		</div>
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Aluminae-Keley-Curtis.jpg" alt="ECE Alumnae Advisory Committee "></img>
+			</div>
+			<div class="prof-title">Chair of the Subcommittee on Student Mentoring</div>
+			<div class="prof-name">Kelsey Curtis</div>
+			<div class="prof-title">Engineer at Infineon Technologies</div>
+		</div>
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Alumnae-Melissa-Erickson.jpg" alt="ECE Alumnae Advisory Committee "></img>
+			</div>
+			<div class="prof-title">Chair of Bay Area Chapter</div>
+			<div class="prof-name">Melissa Erickson</div>
+			<div class="prof-title">Sr. Technical Program Manager at Amazon Lab126</div>
+		</div>
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Alumni-Sonia-Hingorany.jpg" alt="ECE Alumnae Advisory Committee "></img>
+			</div>
+			<div class="prof-title">Chair of Seattle Chapter</div>
+			<div class="prof-name">Sonia Hingorany</div>
+			<div class="prof-title">Senior Manager, Global Infrastructure Expansion, Amazon</div>
+		</div>
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Maryam_Rofougaran.jpg" alt="ECE Alumnae Advisory Committee "></img>
+			</div>
+			<div class="prof-title">Chair of the Orange County Chapter</div>
+			<div class="prof-name">Maryam Rofougaran</div>
+			<div class="prof-title">co-CEO of Movandi Corporation</div>
+		</div>
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Rozi_Roufoogaran.jpg" alt="ECE Alumnae Advisory Committee "></img>
+			</div>
+			<div class="prof-title">Chair of the subcommittee on Fund Raising and Industrial Liaisons</div>
+			<div class="prof-name">Rozi Roufoogaran</div>
+			<div class="prof-title">Engineer Ethertronics Inc.</div>
+		</div>
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Aluminae-C-Gomez.jpg" alt="ECE Alumnae Advisory Committee "></img>
+			</div>
+			<div class="prof-title">Co-Chair of the Subcommittee on K-12 Outreach</div>
+			<div class="prof-name">Caitlin Gomez</div>
+			<div class="prof-title">Radiation Oncologist</div>
+		</div>
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Alumnae-Captain_Jenny_Ji.jpg" alt="ECE Alumnae Advisory Committee "></img>
+			</div>
+			<div class="prof-title">Co-Chair of the Subcommittee on K-12 Outreach</div>
+			<div class="prof-name">Jenny Ji</div>
+			<div class="prof-title">Captain at USAF</div>
+		</div>
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Alumnae-Guadalupe.jpg" alt="ECE Alumnae Advisory Committee "></img>
+			</div>
+			<div class="prof-title">Co-Chair Subcommittee for Alumnae Networking</div>
+			<div class="prof-name">Guadalupe Zaragoza</div>
+			<div class="prof-title">Engineer at Raytheon</div>
+		</div>
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Alumni-Judy_Gilmore.jpg" alt="ECE Alumnae Advisory Committee patel"></img>
+			</div>
+			<div class="prof-title">Co-Chair Subcommittee for Alumnae Networking</div>
+			<div class="prof-name">Judy Gilmore</div>
+			<div class="prof-title">Engineer at Advanced Concept Technologies</div>
+		</div>
+		<div class="card">
+			<div class="frame"> <img class="card-pic" src="/img/Alumni_Wenrui_Yang.jpg" alt="ECE Alumnae Advisory Committee "></img>
+			</div>
+			<div class="prof-title">Chair of the San Diego Chapter</div>
+			<div class="prof-name">Wenrui Yang</div>
+			<div class="prof-title">Engineer at Qualcomm</div>
+		</div>
+	</div>
+	<div class="spacer"><img src="/img/pixel.png"></img>
+	</div>
+</div>
+
+<!-- END ALUMNAE  -->
+
+
+
+<!-- ALuMNI ALUMNI INDEED -->
+<div class="grid-cards">
+	<p>The <span>Alumni Advisory Board</span> provides advice to assist the Department in enhancing its leadership role in education and ­research. The Board organizes the ­<span>Distinguished Alumni ­Lecture ­Program,</span> offering ­insights from the field or ­guidance on launching and ­funding a business and protecting ­intellectual property rights.</p>
+	<div class="card-deck">
+		<div class="card">
+			<div class="frame"><img class="card-pic aab-chair" src="/img/Asad-Madni2.jpg" alt="ECE Alumni Adivsory Boardmember "></div>
+			<div class="prof-title">ECE AAB Chair</div>
+			<div class="prof-name">Asad M. Madni</div>
+			<div class="prof-title">President, COO and CTO (Retired)
+				<br /> BEI Technologies, Inc.</div>
+		</div>
+		<!-- END OF CARD A-->
+		<div class="card">
+            <div class="frame"><img class="card-pic" src="/img/Alumni-Heba-Armand.jpg" alt="ECE Alumni Adivsory Boardmember Alumni-Heba-Armand"></div>
+			<div class="prof-name">Heba A. Armand</div>
+			<div class="prof-title"> Director of Sales, Ventura Foods</div>
+		</div>
+        <!-- END OF CARD B-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Alumni-Leo_Bonilla.jpg" alt="ECE Alumni Adivsory Boardmember "></div>
+			<div class="prof-name">Leonard Bonilla</div>
+			<div class="prof-title">Program Manager (Retired), Raytheon</div>
+		</div>
+		<!-- END OF CARD C-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Alumni-David_doami.jpg" alt="ECE Alumni Adivsory Boardmember "></div>
+			<div class="prof-name">David Doami</div>
+			<div class="prof-title">Director Programs, Northrop Grumman</div>
+		</div>
+		<!-- END OF CARD D-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Aluminae-Ani-Garabedian.jpg" alt="ECE Alumni Adivsory Boardmember "></div>
+			<div class="prof-name">Ani Garabedian</div>
+			<div class="prof-title"> Manager, Communications Systems Engineering Department, Northrop Grumman</div>
+		</div>
+		<!-- END OF CARD E-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Alumni_Geary_Kevin.jpg" alt="ECE Alumni Adivsory Boardmember "></div>
+			<div class="prof-name">Kevin Geary</div>
+			<div class="prof-title">Director, Sensors and Electronics, HRL Laboratories</div>
+		</div>
+		<!-- END OF CARD F-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Goebel.jpg" alt="ECE Alumni Adivsory Boardmember "></div>
+			<div class="prof-name">Dan Goebel</div>
+			<div class="prof-title">Adjunct Professor and Senior Research Scientist, Jet Propulsion Laboratory</div>
+		</div>
+		<!-- END OF CARD G-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Goodin.jpg" alt="ECE Alumni Adivsory Boardmember "></div>
+			<div class="prof-name">William Goodin</div>
+			<div class="prof-title"> Director of Alumni Relations (Retired), UCLA</div>
+		</div>
+		<!-- END OF CARD H-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Alumni-Green-Robert.jpg" alt="ECE Alumni Adivsory Boardmember patel"></div>
+			<div class="prof-name">Robert Green</div>
+			<div class="prof-title">Attorney (Retired), Lewis Roca Rothgerber Christie LLP</div>
+		</div>
+		<!-- END OF CARD I-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Alumni-Sonia-Hingorany.jpg" alt="ECE Alumni Adivsory Boardmember"></div>
+			<div class="prof-name">Sonia Hingorany</div>
+			<div class="prof-title">Senior Manager, Global Infrastructure Expansion, Amazon</div>
+		</div>
+		<!-- END OF CARD J-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Alumnae-King_Grace.jpg" alt="ECE Alumni Adivsory Boardmember"></div>
+			<div class="prof-name">Grace King</div>
+			<div class="prof-title">Attorney with Deloitte</div>
+		</div>
+		<!-- END OF CARD K-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Alumni-Anthony-Lai.jpg" alt="ECE Alumni Adivsory Boardmember"></div>
+			<div class="prof-name">Anthony Lai</div>
+			<div class="prof-title">Chief Architect, Cobham Advanced Electronic Solutions</div>
+		</div>
+		<!-- END OF CARD L-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Alumni-Leticia_Solis.jpg" alt="ECE Alumni Adivsory Boardmember patel"></div>
+			<div class="prof-name">Leticia Solis</div>
+			<div class="prof-title">Deputy Executive Director, Wayside Engineering, Los Angeles Metro</div>
+		</div>
+		<!-- END OF CARD M-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Alumni-Divya-Sudhakar.jpg" alt="ECE Alumni Adivsory Boardmember"></div>
+			<div class="prof-name">Divya Sudhakar</div>
+			<div class="prof-title">Senior Software Engineer, Airbnb</div>
+		</div>
+		<!-- END OF CARD N-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Alumni-LeoSzeto.jpg" alt="ECE Alumni Adivsory Boardmember"></div>
+			<div class="prof-name">Leo Szeto</div>
+			<div class="prof-title">Director, Controls and Engineering, Nusano Inc.</div>
+		</div>
+		<!-- END OF CARD O-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/alumni-martha-ventura.jpg" alt="ECE Alumni Adivsory Boardmember"></div>
+			<div class="prof-name">Martha Ventura</div>
+			<div class="prof-title">Vice President, Engineering and Operations, T-Mobile</div>
+		</div>
+		<!-- END OF CARD P-->
+		<div class="card">
+			<div class="frame"><img class="card-pic" src="/img/Alumni_Wenrui_Yang.jpg" alt="ECE Alumni Adivsory Boardmember"></div>
+			<div class="prof-name">Wenrui Yang</div>
+			<div class="prof-title">Software Product Manager, Teradyne</div>
+		</div>
+		<!-- END OF CARD Q-->
+	</div>
+	<div class="spacer"><img src="/img/pixel.png"></div>
+</div>
+<!-- END OF SECTION ALUMNI -->
+
+
 <!-- ALUMNI INDUSTRY -->
 <div class="grid-cards">
     <h3 class="page-title">Electrical and Computer Engineering Partnerships (ECEP)</h3>
@@ -108,7 +320,7 @@
         </div>
         <div class="card">
             <div class="card-name">ABET Committee</div>
-            <div class="prof-name">Abeer Alwan <div class="prof-title">Vice-Chair, Undergraduate Affairs</div></div>
+            <div class="prof-name">Danijela Cabric <div class="prof-title">Vice-Chair, Undergraduate Affairs</div></div>
             <div class="prof-name">Asad M. Madni <div class="prof-title">Alumni Advisory Board Chair</div></div>
             <div class="prof-name">C.-K. Ken Yang <div class="prof-title">Department Chair</div></div>
             <div class="prof-name">­Subramanian Iyer <div class="prof-title"> Industry Relations</div></div>
@@ -116,7 +328,7 @@
         <div class="card">
             <div class="card-name">Center Directors and Committee Chairs</div>
             <div class="prof-name ">Rob Candler <div class="prof-title ">Director, Nano-Electronics Research Facility</div></div>
-            <div class="prof-name ">Benjamin Williams  <div class="prof-title ">Chair, Recruitment Committee</div></div>
+            <div class="prof-name ">t.b.d.  <div class="prof-title ">Chair, Recruitment Committee</div></div>
             <div class="prof-name ">C.-K. Ken Yang <div class="prof-title ">Director, Center for High-Frequency Electronics</div></div>
         </div>
     </div>
@@ -149,25 +361,22 @@
             <div class="card-name">Writers</div>
             <div class="twocol">
                 <div>
-                    <div class="prof-title">Professor <span class="prof-name">C.-K. Ken Yang</span></div>
-                    <div class="prof-title">Asst. Professor <span class="prof-name">Sergio Carbajo</span></div><br>
-                    <div class="prof-title">Professor <span class="prof-name">Bahman Gharesifard</span></div><br>
-                    <div class="prof-title">Asst. Professor <span class="prof-name">Yang Zhang</span></div><br>
-                    <div class="prof-title">Dist. Professor <span class="prof-name">Asad M. Madni</span></div><br>
-                    <div class="prof-title">Dist. Professor <span class="prof-name">Jia Ming Liu</span></div><br>
-                    <div class="prof-title">Alumni <span class="prof-name">Adrian Tang</span></div><br>
-                    <div class="prof-title">Alumni <span class="prof-name">Kat Echazarreta</span></div><br>
-                    <div class="prof-title">Professor <span class="prof-name">Suhas Diggavi</span></div><br>
+                    <div class="prof-title">Professor <span class="prof-name">C.-K. Ken Yang</span></div><br>
+                    <div class="prof-title">Asst. Professor <span class="prof-name">Yuan Tian</span></div><br>
+                    <div class="prof-title">Professor <span class="prof-name">Mona Jaharri</span></div><br>
+                    <div class="prof-title">Professor <span class="prof-name">Dejan Markovic</span></div><br>
+                    <div class="prof-title">Dist. Professor <span class="prof-name">M.C. Frank Chang</span></div><br>
+                    <div class="prof-title">Dist. Professor <span class="prof-name">Asad Madni</span></div><br>
+                    <div class="prof-title">Dist. Professor <span class="prof-name">­Subramanian Iyer</span></div><br>
                 </div>
                 <div>
-                    <div class="prof-title">Professor <span class="prof-name">Achuta Kadambi</span></div><br>
-                    <div class="prof-title">Professor <span class="prof-name">Xiang Anthony Chen</span></div><br>
-                    <div class="prof-title">Professor <span class="prof-name">Sam Emaminejad</span></div><br>
-                    <div class="prof-title">Dist. Professor <span class="prof-name">Yahya Rahmat-Samii</span></div><br>
+                    <div class="prof-title">Associate Professor <span class="prof-name">Sam Emaminejad</span></div><br>
+                    <div class="prof-title">Dist Professor <span class="prof-name">Jason Cong</span></div><br>
+                    <div class="prof-title">Dist. Professor <span class="prof-name">Bahram Jalali</span></div><br>
                     <div class="prof-title">Professor <span class="prof-name">Aydogan Ozcan</span></div><br>
-                    <div class="prof-title">Professor <span class="prof-name">Kang Wang</span></div><br>
-                    <div class="prof-title">Professor <span class="prof-name">Clarice Aiello</span></div><br>
-                    <div class="prof-title">Professor <span class="prof-name">Danijela Cabric</span></div><br>
+                    <div class="prof-title">Dist. Professor <span class="prof-name">Yahya Rahmat-Samii</span></div><br>
+                    <div class="prof-title">Asst. Professor <span class="prof-name">Anthony Chen</span></div><br>
+                    <div class="prof-title">Alumna <span class="prof-name">Leticia Solis</span></div><br>
                     <div class="prof-title">Executive Director of Communications <span class="prof-name">Christine Wei-li Lee</span></div><br>
                 </div>
             </div>
@@ -185,5 +394,5 @@
     </div>
 
 </div>
-<!-- <div class="spacer"><img src="/img/pixel.png"></div> -->
+<div class="spacer"><img src="/img/pixel.png"></div>
 <!-- end of credits # -->
