credits and dept updates

--- a/src/assets/html-Overview.html
+++ b/src/assets/html-Overview.html
@@ -38,6 +38,8 @@ https://nanolab.ucla.edu/ -->
           <div class="research-prof"></div>
           <a
             class="link"
+            target="_blank"
+            rel="noopener"
             href="https://www.anderson.ucla.edu/centers/easton-technology-management-center"
             >anderson.ucla.edu/centers/easton-technology-management-center</a
           >
@@ -55,7 +57,7 @@ https://nanolab.ucla.edu/ -->
             Professor Aydogan Ozcan, Associate Director of Entrepreneurship,
             Industry and Academic Exchange
           </div>
-          <a class="link" href="https://cnsi.ucla.edu">cnsi.ucla.edu</a>
+          <a class="link" target="_blank" rel="noopener" href="https://cnsi.ucla.edu">cnsi.ucla.edu</a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -71,7 +73,7 @@ https://nanolab.ucla.edu/ -->
           <div class="research-prof">
             Professors Puneet Gupta, Subramanian S. Iyer
           </div>
-          <a class="link" href="http://cden.ucsd.edu/index.php">cden.ucsd.edu</a>
+          <a class="link" target="_blank" rel="noopener" href="http://cden.ucsd.edu/index.php">cden.ucsd.edu</a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -88,7 +90,7 @@ https://nanolab.ucla.edu/ -->
             Professors Lara Dolecek, Rick Wesel, Principal Investigators.
             Collaborators: Professors Dejan Markovic, Dariush Divsalar
           </div>
-          <a class="link" href="http://www.codess.ee.ucla.edu/"
+          <a class="link" target="_blank" rel="noopener" href="http://www.codess.ee.ucla.edu/"
             >codess.ee.ucla.edu</a
           >
         </div>
@@ -106,7 +108,7 @@ https://nanolab.ucla.edu/ -->
           <div class="research-prof">
             Professor Jason Cong, Director. Professor M. C. Frank Chang
           </div>
-          <a class="link" href="https://cdsc.ucla.edu/">cdsc.ucla.edu</a>
+          <a class="link" target="_blank" rel="noopener"  href="https://cdsc.ucla.edu/">cdsc.ucla.edu</a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -123,7 +125,7 @@ https://nanolab.ucla.edu/ -->
             Professor Mihaela van der Schaar, Center Director. Professor Paulo
             Tabuada
           </div>
-          <a class="link" href="http://netecon.ee.ucla.edu/"
+          <a class="link" target="_blank" rel="noopener" href="http://netecon.ee.ucla.edu/"
             >netecon.ee.ucla.edu</a
           >
         </div>
@@ -143,7 +145,7 @@ https://nanolab.ucla.edu/ -->
             Dejan Markovic, Sudhakar Pamarti, Gregory Pottie, Dwight Streit,
             King-Ning Tu, Jason Woo
           </div>
-          <a class="link" href="https://chips.ucla.edu/">chips.ucla.edu</a>
+          <a class="link" target="_blank" rel="noopener" href="https://chips.ucla.edu/">chips.ucla.edu</a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -157,7 +159,7 @@ https://nanolab.ucla.edu/ -->
             Center for High Frequency Electronics (CHFE)
           </div>
           <div class="research-prof">Professor Y. Ethan Wang</div>
-          <a class="link" href="http://www.chfe.ee.ucla.edu/">chfe.ee.ucla.edu</a>
+          <a class="link" target="_blank" rel="noopener" href="http://www.chfe.ee.ucla.edu/">chfe.ee.ucla.edu</a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -174,7 +176,7 @@ https://nanolab.ucla.edu/ -->
           <div class="research-prof">
             Professors Kang Wang, Robert Candler, Yuanxun Ethan Wang
           </div>
-          <a class="link" href="http://www.tanms-erc.org">tanms-erc.org</a>
+          <a class="link" target="_blank" rel="noopener" href="http://www.tanms-erc.org">tanms-erc.org</a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -188,7 +190,7 @@ https://nanolab.ucla.edu/ -->
             Center of Excellence for Green Nanotechnologies (CEGN)
           </div>
           <div class="research-prof">Professor Kang Wang, Co-Director</div>
-          <a class="link" href="https://cegn.kacst.edu.sa/">cegn.kacst.edu.sa</a>
+          <a class="link" target="_blank" rel="noopener" href="https://cegn.kacst.edu.sa/">cegn.kacst.edu.sa</a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -237,7 +239,7 @@ https://nanolab.ucla.edu/ -->
           <div class="research-prof">
             Professor Stanley Osher, Director of Special Projects
           </div>
-          <a class="link" href="http://www.ipam.ucla.edu">ipam.ucla.edu</a>
+          <a class="link" target="_blank" rel="noopener" href="http://www.ipam.ucla.edu">ipam.ucla.edu</a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -251,7 +253,7 @@ https://nanolab.ucla.edu/ -->
             Institute for Technology Advancement (ITA)
           </div>
           <div class="research-prof">Professor Dwight Streit, Director</div>
-          <a class="link" href="https://www.ita.ucla.edu/">ita.ucla.edu</a>
+          <a class="link" target="_blank" rel="noopener" href="https://www.ita.ucla.edu/">ita.ucla.edu</a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -267,7 +269,7 @@ https://nanolab.ucla.edu/ -->
           <div class="research-prof">
             Professor Sam Emaminejad, Principal Investigator
           </div>
-          <a class="link" href="https://i2bl.org">i2bl.org</a>
+          <a class="link" target="_blank" rel="noopener" href="https://i2bl.org">i2bl.org</a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -296,7 +298,7 @@ https://nanolab.ucla.edu/ -->
             Laboratory for Embedded Machines and Ubiquitous Robotics (LEMUR)
           </div>
           <div class="research-prof">Professor Mayank Mehta</div>
-          <a class="link" href="https://uclalemur.com/">uclalemur.com</a>
+          <a class="link" target="_blank" rel="noopener" href="https://uclalemur.com/">uclalemur.com</a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -322,7 +324,7 @@ https://nanolab.ucla.edu/ -->
           </div>
           <div class="research-name">Public Safety Network Systems (PSNS)</div>
           <div class="research-prof">Professor Izhak Rubin</div>
-          <a class="link"></a>
+          <a class="link" target="_blank" rel="noopener" ></a>
         </div>
         <div class="research-center">
           <div class="research-logo-frame">
@@ -363,7 +365,7 @@ https://nanolab.ucla.edu/ -->
             Western Institute for Nanoelectronics (WIN)
           </div>
           <div class="research-prof">Professor Kang Wang, Director</div>
-          <a class="link" href="http://win-nano.org">win-nano.org</a>
+          <a class="link" target="_blank" rel="noopener" href="http://win-nano.org">win-nano.org</a>
         </div>
       </div>
       <div class="spacer"><img src="/img/pixel.png" /></div>
