--- a/src/assets/html-alumni.html
+++ b/src/assets/html-alumni.html
@@ -245,54 +245,6 @@
 
     <div class="spacer"><img src="/img/pixel.png"></div>
 
-
-    <h3 class="page-title">Professor Subramanian S. Iyer IMAPS Award</h3>
-
-    <p style="text-indent: 0;"> <span class="first-letter">As recognition  </span>  for his outstanding contributions in the field of microelectronics, Professor Subramanian S. Iyer received the Daniel C. Hughes, Jr. Memorial Award from the International Microelectronics Assembly & Packaging Society (IMAPS). IMAPS is the largest society dedicated to the growth and technical advancement of microelectronics and electronics packaging through professional education.The Daniel C. Hughes, Jr. Memorial Award is the highest and most prestigious IMAPS technical honor, and is awarded only to individuals who have demonstrated remarkable progress in the field of microelectronics, along with exceptional support of the microelectronics industry, academic achievement, or assistance and service to IMAPS. As a recipient of the award, Professor Iyer was automatically made a Life Member and a Fellow of IMAPS.</p>
-
-    <p>Professor Iyer is the Vice-Chair, Industry Relations and holds the Charles P. Reames Endowed Chair, as well as a joint appointment in the Materials Sciences and Engineering Department. He is Director of the Center for Heterogeneous Integration and Performance Scaling (CHIPS).Among his many technical accomplishments are the development of embedded DRAM and 45nm technology nodes used in the creation of the first generation of low-power portable devices. Professor Iyer has published over 300 papers and has more than 75 patents.</p>
-
-    <div class="card-deck">
-        <div class="card">
-            <div class="frame"><img class="card-pic-fellowship" src="/img/iyer_subramanian.jpg" alt="Professor Subramanian S. Iyer"></div>
-            <div class="prof-title">Distinguished Chancellor\'s Professor</div>
-            <div class="prof-title">Charles P. Reames Endowed Chair</div>
-            <div class="prof-name">Subramanian S. Iyer</div>
-            <div class="prof-title">ECE Vice-Chair, Industry Relations</div>
-            <div class="prof-title">Director of the Center for Heterogeneous Integration and Performance Scaling (CHIPS)</div>
-            <div class="prof-title">IMAPS Daniel C. Hughes, Jr. Memorial Award recipient 2020</div>
-            <div class="prof-title">IMAPS Life Member and Fellow 2020</div>
-            <div class="prof-title">National Academy of Inventors, 2017.</div>
-            <div class="prof-title">He is also a Fellow of IEEE and the American Physical Society</div>
-        </div>
-    </div>        <!-- end card-deck -->
-    <div class="spacer"><img src="/img/pixel.png"></div>
-
-    <h3 class="page-title">Qualcomm Innovation Fellowship</h3>
-    <div>
-        <p style="text-indent: 0;"> <span class="first-letter">The Qualcomm </span>  Innovation Fellowship began in 2009, and has continued to grow with the addition of more universities, more candidates, and expansion to research centers internationally. Qualcomm believes that research and development is the key to harnessing the power of imagination and to discovering new possibilities. Qualcomm’s core values of innovation, execution and teamwork is embedded in its Fellowship program. The goal is to enable students to pursue their futuristic innovative ideas. Tianmu Li and Jiyue Yang, PhD students in the UCLA Electrical and Computer Engineering department, were awarded the 2021 Qualcomm Innovation Fellowship. While the program spans across the globe, Li and Yang were selected as one of 16 teams out of over 100 submissions to be granted the fellowship in North America. Their winning proposal, “A Stochastic Compute-In-Memory Neural Network Accelerator with Variable Precision Tuning,” was the only one chosen from UCLA.</p>
-
-    <p>Yang summarizes the proposal as a way to focus on “building a very low-power neural network accelerator for IoT [Internet of Things] edge devices.” A significant number of IoT edge devices use small batteries as a source of energy, which can prove troublesome for “large deep-learning algorithms” that require more energy than these batteries can provide. The proposal seeks to change this by addressing how deep-learning algorithms could be computed more efficiently. The implications for the design would “give edge devices more compute power and provide users faster responses and make their data more private.” Such a proposal requires an enormous amount of teamwork and communication between Li and Yang, who explained how they approached working on the proposal together. “I [Yang] am focusing on designing and building high-performance circuit hardware. Tianmu is focusing on training and improving deep-learning algorithms in software. We have to constantly discuss with each other to make sure that the hardware and algorithms are not only compatible but also bring out the best potential performance.”</p>
-
-    <p>The one-year fellowship offers an abundance of benefits, including exclusive mentorship from Qualcomm’s engineers, as well as $100k in fellowship funding. Li and Yang have already planned the next steps of their proposal, which includes drafting and producing silicon chip hardware for their project. This consistent effort and planning have provided Li and Yang with an unparalleled chance to continue developing their skills as engineers as they learn from some of the best in the world. Yang noted, “This fellowship is not only a recognition of our work from a leading company in the semiconductor industry, but also a good opportunity for us to exchange ideas with Qualcomm’s senior engineers.”</p>
-    </div>
-    <div class="spacer"><img src="/img/pixel.png"></div>
-
-    <div class="card-deck">
-        <div class="card">
-            <div class="frame"><img class="card-pic-fellowship" src="/2021-2022/img/qualcom-tianmu-li.jpg" alt="Qualcom Fellowship Tianmu Li"></div>
-            <div class="prof-name">Tianmu Li</div>
-            <div class="prof-title">Advisor: Puneet Gupta</div>
-            <div class="prof-title">Project: A Stochastic Compute-In-Memory Neural Network Accelerator with Variable Precision Tuning</div>
-        </div>
-        <div class="card">
-            <div class="frame"><img class="card-pic-fellowship" src="/2021-2022/img/qualcom-jiyue-yang.jpg" alt="Industry Fellowship Jiyue Yang"></div>
-            <div class="prof-name">Jiyue Yang</div>
-            <div class="prof-title">Advisor: Sudhakar Pamarti</div>
-            <div class="prof-title">Project: A Stochastic Compute-In-Memory Neural Network Accelerator with Variable Precision Tuning</div>
-        </div>
-    </div>        <!-- end card-deck -->
-    <div class="spacer"><img src="/img/pixel.png"></div>
 </div>
 <!-- END OF SECTION INDUSTRY-->
 
@@ -361,23 +313,23 @@
             <div class="card-name">Writers</div>
             <div class="twocol">
                 <div>
-                    <div class="prof-title">Professor <span class="prof-name">C.-K. Ken Yang</span></div><br>
-                    <div class="prof-title">Asst. Professor <span class="prof-name">Yuan Tian</span></div><br>
-                    <div class="prof-title">Professor <span class="prof-name">Mona Jaharri</span></div><br>
-                    <div class="prof-title">Professor <span class="prof-name">Dejan Markovic</span></div><br>
-                    <div class="prof-title">Dist. Professor <span class="prof-name">M.C. Frank Chang</span></div><br>
-                    <div class="prof-title">Dist. Professor <span class="prof-name">Asad Madni</span></div><br>
-                    <div class="prof-title">Dist. Professor <span class="prof-name">­Subramanian Iyer</span></div><br>
+                    <div class="prof-title">Professor</div><div class="prof-name">C.-K. Ken Yang</div><br>
+                    <div class="prof-title">Asst. Professor</div><div class="prof-name">Yuan Tian</div><br>
+                    <div class="prof-title">Professor </div><div class="prof-name">Mona Jaharri</div><br>
+                    <div class="prof-title">Professor </div><div class="prof-name">Dejan Markovic</div><br>
+                    <div class="prof-title">Dist. Professor </div><div class="prof-name">M.C. Frank Chang</div><br>
+                    <div class="prof-title">Dist. Professor </div><div class="prof-name">Asad Madni</div><br>
+                    <div class="prof-title">Dist. Professor </div><div class="prof-name">­Subramanian Iyer</div><br>
                 </div>
                 <div>
-                    <div class="prof-title">Associate Professor <span class="prof-name">Sam Emaminejad</span></div><br>
-                    <div class="prof-title">Dist Professor <span class="prof-name">Jason Cong</span></div><br>
-                    <div class="prof-title">Dist. Professor <span class="prof-name">Bahram Jalali</span></div><br>
-                    <div class="prof-title">Professor <span class="prof-name">Aydogan Ozcan</span></div><br>
-                    <div class="prof-title">Dist. Professor <span class="prof-name">Yahya Rahmat-Samii</span></div><br>
-                    <div class="prof-title">Asst. Professor <span class="prof-name">Anthony Chen</span></div><br>
-                    <div class="prof-title">Alumna <span class="prof-name">Leticia Solis</span></div><br>
-                    <div class="prof-title">Executive Director of Communications <span class="prof-name">Christine Wei-li Lee</span></div><br>
+                    <div class="prof-title">Associate Professor </div><div class="prof-name">Sam Emaminejad</div><br>
+                    <div class="prof-title">Dist Professor </div><div class="prof-name">Jason Cong</div><br>
+                    <div class="prof-title">Dist. Professor </div><div class="prof-name">Bahram Jalali</div><br>
+                    <div class="prof-title">Professor </div><div class="prof-name">Aydogan Ozcan</div><br>
+                    <div class="prof-title">Dist. Professor </div><div class="prof-name">Yahya Rahmat-Samii</div><br>
+                    <div class="prof-title">Asst. Professor </div><div class="prof-name">Anthony Chen</div><br>
+                    <div class="prof-title">Alumna </div><div class="prof-name">Leticia Solis</div><br>
+                    <div class="prof-title">Executive Director of Communications </div><div class="prof-name">Christine Wei-li Lee</div><br>
                 </div>
             </div>
 
@@ -386,10 +338,9 @@
 
     <div class="card-credits">
         <div class="card">
-            <div class="card-name">Design & Development</div>
-            <div class="prof-name">Mauricio Feldman-Abe </br>
-                <div class="prof-title">Designer and<br>React developer</div>
-            </div>
+					<div class="card-name">Design & Development</div>
+				  <div class="prof-title">Designer and React developer</div>
+          <div class="prof-name">Mauricio Feldman-Abe </div>
         </div>
     </div>
 
